# bulletin_board

./: .env_sample  README.md  docker-compose.yaml  pyproject.toml
adboards/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
adboards/migrations/: 0001_initial.py
adboards/tests/: test_ads.py
config/: settings.py  urls.py
users/: models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py
